--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   snippet_coder_utils: ^1.0.12
   api_cache_manager: ^1.0.2
   mask_text_input_formatter: ^2.4.0
+  badges: ^2.0.3
 
 dev_dependencies:
   flutter_test:
