--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # fonts:
